syntax = "proto3";
package common;
option  go_package = "laiya/proto/common";

enum LoginPlatformType {
    unknownPlatform = 0; //未知的平台
    windows = 1;
    ios = 2;
    android = 3;
    web = 4;
    macos = 5;
    linux = 6;
}

message UserDef {
    enum UserType {
        Unknown = 0; //未知类型
        User = 1; //用户
        Robot = 2; //机器人
    }
}

//群权限相关
message GroupPermissionsDef {
    //用户类型
    enum Type {
        UnknownType = 0; //未知类型
        User = 1; //普通用户
        Admin = 2; //管理员 MuteOtherVoice
    }
    //需要权限的功能
    enum Access {
        UnknownAccess = 0; //未知类型
        ChangePermissions = 1; //设置管理员权限
        MuteOther = 2; //静音其他用户
    }
}